--- a/src/tgcommander/TGcommanderView.form
+++ b/src/tgcommander/TGcommanderView.form
@@ -21,12 +21,15 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <Component id="eszkoztar" min="-2" pref="302" max="-2" attributes="0"/>
-                  <EmptySpace pref="334" max="32767" attributes="0"/>
+                  <EmptySpace pref="408" max="32767" attributes="0"/>
                   <Component id="jToolBar1" min="-2" pref="96" max="-2" attributes="0"/>
               </Group>
-              <Component id="szabadHelyPane" alignment="0" pref="732" max="32767" attributes="0"/>
-              <Component id="aktualisKonyvtarPane" alignment="0" pref="732" max="32767" attributes="0"/>
-              <Component id="panelek" alignment="0" pref="732" max="32767" attributes="0"/>
+              <Group type="102" alignment="0" attributes="0">
+                  <Component id="aktualisKonyvtarPane" pref="400" max="32767" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Component id="szabadHelyPane" pref="400" max="32767" attributes="0"/>
+              </Group>
+              <Component id="panelek" alignment="0" pref="806" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
@@ -37,10 +40,11 @@
                       <Component id="eszkoztar" min="-2" max="-2" attributes="1"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="szabadHelyPane" min="-2" pref="18" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="aktualisKonyvtarPane" min="-2" pref="25" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="szabadHelyPane" min="-2" pref="18" max="-2" attributes="0"/>
+                      <Component id="aktualisKonyvtarPane" min="-2" pref="25" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="panelek" pref="363" max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -146,6 +150,7 @@
           <SubComponents>
             <Container class="javax.swing.JScrollPane" name="panelBal">
               <Properties>
+                <Property name="autoscrolls" type="boolean" value="true"/>
                 <Property name="name" type="java.lang.String" value="panelBal" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[400, 500]"/>
@@ -169,6 +174,7 @@
                         <Column editable="false" title="Jogosults&#xe1;gok" type="java.lang.Object"/>
                       </Table>
                     </Property>
+                    <Property name="autoResizeMode" type="int" value="4"/>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
@@ -193,13 +199,15 @@
                         </Column>
                       </TableColumnModel>
                     </Property>
+                    <Property name="fillsViewportHeight" type="boolean" value="true"/>
                     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[2147483647, 1200]"/>
+                      <Dimension value="[2147483647, 152155141]"/>
                     </Property>
                     <Property name="name" type="java.lang.String" value="listaBal" noResource="true"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[390, 500]"/>
                     </Property>
+                    <Property name="rowHeight" type="int" value="10"/>
                     <Property name="showVerticalLines" type="boolean" value="false"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                       <TableHeader reorderingAllowed="false" resizingAllowed="true"/>
@@ -808,7 +816,7 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusMessageLabel" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="562" max="32767" attributes="0"/>
+                  <EmptySpace pref="550" max="32767" attributes="0"/>
                   <Component id="progressBar" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="statusAnimationLabel" min="-2" max="-2" attributes="0"/>
