--- a/src/tgcommander/TGcommanderView.form
+++ b/src/tgcommander/TGcommanderView.form
@@ -21,7 +21,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <Component id="eszkoztar" min="-2" pref="302" max="-2" attributes="0"/>
-                  <EmptySpace pref="408" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
                   <Component id="jToolBar1" min="-2" pref="96" max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
@@ -45,7 +45,7 @@
                       <Component id="aktualisKonyvtarPane" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="1"/>
-                  <Component id="panelek" pref="363" max="32767" attributes="0"/>
+                  <Component id="panelek" pref="343" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
