--- a/src/tgcommander/TGcommanderView.form
+++ b/src/tgcommander/TGcommanderView.form
@@ -54,12 +54,12 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="kilepesGomb1">
+            <Component class="javax.swing.JButton" name="atnevezesGomb">
               <Properties>
                 <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
                   <action class="tgcommander.TGcommanderView" id="atnevezes" methodName="atnevezes"/>
                 </Property>
-                <Property name="text" type="java.lang.String" resourceKey="kilepesGomb1.text"/>
+                <Property name="text" type="java.lang.String" resourceKey="atnevezesGomb.text"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
                     <BevelBorder/>
@@ -73,19 +73,19 @@
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[90, 25]"/>
                 </Property>
-                <Property name="name" type="java.lang.String" value="kilepesGomb1" noResource="true"/>
+                <Property name="name" type="java.lang.String" value="atnevezesGomb" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[90, 25]"/>
                 </Property>
                 <Property name="verticalTextPosition" type="int" value="3"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="torlesGomb1">
+            <Component class="javax.swing.JButton" name="masolasGomb">
               <Properties>
                 <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
                   <action class="tgcommander.TGcommanderView" id="masolas" methodName="masolas"/>
                 </Property>
-                <Property name="text" type="java.lang.String" resourceKey="torlesGomb1.text"/>
+                <Property name="text" type="java.lang.String" resourceKey="masolasGomb.text"/>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
                     <BevelBorder/>
@@ -99,7 +99,7 @@
                 <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[90, 25]"/>
                 </Property>
-                <Property name="name" type="java.lang.String" value="torlesGomb1" noResource="true"/>
+                <Property name="name" type="java.lang.String" value="masolasGomb" noResource="true"/>
                 <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                   <Dimension value="[90, 25]"/>
                 </Property>
@@ -299,7 +299,7 @@
                                       <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel1" pref="323" max="32767" attributes="0"/>
+                                      <Component id="balFajlokSzama" pref="323" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -310,7 +310,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel1" min="-2" pref="14" max="-2" attributes="0"/>
+                              <Component id="balFajlokSzama" min="-2" pref="14" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="balKonyvtar" alignment="3" pref="25" max="32767" attributes="0"/>
@@ -361,10 +361,10 @@
                         <Property name="name" type="java.lang.String" value="balSzuloGomb" noResource="true"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="jLabel1">
+                    <Component class="javax.swing.JLabel" name="balFajlokSzama">
                       <Properties>
-                        <Property name="text" type="java.lang.String" resourceKey="jLabel1.text"/>
-                        <Property name="name" type="java.lang.String" value="jLabel1" noResource="true"/>
+                        <Property name="text" type="java.lang.String" resourceKey="balFajlokSzama.text"/>
+                        <Property name="name" type="java.lang.String" value="balFajlokSzama" noResource="true"/>
                       </Properties>
                     </Component>
                   </SubComponents>
@@ -445,7 +445,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jLabel2" pref="270" max="32767" attributes="0"/>
+                                      <Component id="jobbFajlokSzama" pref="270" max="32767" attributes="0"/>
                                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -456,7 +456,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jLabel2" min="-2" pref="14" max="-2" attributes="0"/>
+                              <Component id="jobbFajlokSzama" min="-2" pref="14" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jobbKonyvtar" alignment="3" pref="25" max="32767" attributes="0"/>
@@ -505,10 +505,10 @@
                         <Property name="name" type="java.lang.String" value="jobbSzuloGomb" noResource="true"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JLabel" name="jLabel2">
+                    <Component class="javax.swing.JLabel" name="jobbFajlokSzama">
                       <Properties>
-                        <Property name="text" type="java.lang.String" resourceKey="jLabel2.text"/>
-                        <Property name="name" type="java.lang.String" value="jLabel2" noResource="true"/>
+                        <Property name="text" type="java.lang.String" resourceKey="jobbFajlokSzama.text"/>
+                        <Property name="name" type="java.lang.String" value="jobbFajlokSzama" noResource="true"/>
                       </Properties>
                     </Component>
                   </SubComponents>
